# quick_notes_cli

./: README.md  main.py  notes.md  pyproject.toml
